[package]
name = "dnevnik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/wasm/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3.64"
web-sys = "0.3.64"
serde-wasm-bindgen = "0.4"